tests/ast_interpreter/div_by_zero.expected
<string>:1:3: error: division by zero
4 / 0
  ^